Fix: added comment function and refactor
